Faz launcher.sh passar --enable-preview ao rodar app no servidor